# agentic-deep-research

./: .gitignore  AGENTS.md  README.md  langgraph.json  pyproject.toml
src/: agent.py  graph.py  main.py
src/utils/: nodes.py  prompts.py  state.py  tools.py  vectorstore.py
