[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "chainlit>=2.10.0",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langgraph-cli[inmem]>=0.4.14",
    "langsmith>=0.7.6",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.1",
    "tavily>=1.1.0",
    "tenacity>=9.1.4",
]

[tool.uv]
package = true
